--- a/ST 695 Sequential Split Plot Designs.Rmd
+++ b/ST 695 Sequential Split Plot Designs.Rmd
@@ -51,6 +51,7 @@ set.seed(1)
   N <- r * 2^HTC # Number of Whole Plots
   M <- 2^ETC #Number of Runs per Whole Plot
   q <- ncol(X) # Number of Main Effects and Interaction Effects
+  n <- r * 2^HTC * 2^ETC
   nsim <- 100  #Number of Simulation Runs
 
   fixed_effect_names <- paste0("beta", colnames(X))
@@ -74,16 +75,17 @@ sim_data <- function(X, beta) {
         
         # Linear Terms
         for (r in 1:q) {
-        mu[i,j] <- mu[i,j] + X[i,r] * beta[r] + delta[i] + epsilon [i,j]
+        mu[i,j] <- mu[i,j] + X[i,r] * beta[r] 
         }
+        mu[i,j] <- mu[i,j] + delta[i] + epsilon [i,j]
       }
     }
     return(mu)
   }
 
-
+Y <- matrix(0, nrow = n , ncol = nsim )
 for (i in 1:nsim) {
-    Y <- sim_data(X, beta)
+    Y[,i] <- sim_data(X, beta)
     }
 
 ```
@@ -91,45 +93,7 @@ for (i in 1:nsim) {
 Simulation Summary Results
 ```{r}
 
-sim_summary <- function(sim_df) {
-    beta_mean <- data.frame(matrix(NA, nrow = nsim, ncol = 23))
-    beta_lower <- data.frame(matrix(NA, nrow = nsim, ncol = 23))
-    beta_upper <- data.frame(matrix(NA, nrow = nsim, ncol = 23))
-    zero_captured <- data.frame(matrix(NA, nrow = nsim, ncol = 23))
-    param_captured <- data.frame(matrix(NA, nrow = nsim, ncol = 23))
-    
-    for (i in 1:nsim) {
-        for (j in 1:length(params)) {
-            beta_mean[i,j] <- sim_df[[i]]$statistics[names(params)[j], "Mean"]
-            beta_lower[i,j] <- sim_df[[i]]$quantiles[names(params)[j], "2.5%"]
-            beta_upper[i,j] <- sim_df[[i]]$quantiles[names(params)[j], "97.5%"]
-        }
-    }
-    
-    for (i in 1:nsim) {
-        for (j in 1:length(params)) {
-            zero_captured[i,j] <- (0 >= beta_lower[i,j] && 0 <= beta_upper[i,j])
-        }
-    }    
-    for (i in 1:nsim) {
-        for (j in 1:length(params)) {
-            param_captured[i,j] <- (params[[j]] >= beta_lower[i,j] && params[[j]] <= beta_upper[i,j])
-        }
-    }
-    
-    results <- data.frame(
-        "actual" = params,
-        "predicted" = sapply(beta_mean, mean),
-        "bias" = sapply(beta_mean, mean) - params,
-        "variance" = sapply(beta_mean, sd)^2,
-        "mse" = sapply(beta_mean, sd)^2 + (sapply(beta_mean, mean) - params)^2, # variance + bias^2
-        "prop 0 in CI" = sapply(zero_captured, mean),
-        "prop param in CI" = sapply(param_captured, mean),
-        check.names = FALSE
-    )
-    results <- data.frame(t(results))
-    results <- as.data.frame(lapply(results, round, digits = 3), check.names = FALSE, row.names = row.names(results))
-    return(results)
-}
+
+
 
 ```
